--- a/electro/templates/base.html
+++ b/electro/templates/base.html
@@ -73,6 +73,11 @@
   height: 3px;
   background: #FFAEBC;
 }
+.logo img{
+  width: 50px;
+  height: 30px;
+
+}
     
 
     </style>
@@ -84,7 +89,7 @@
                 <nav class="navbar navbar-expand justify-content-around navbaar">
                     <!-- Brand/logo -->
                     <!-- <h1 class="navbar-brand logo py-2">Accessories</h1> -->
-                       <h1 class="navbar-brand logo py-2">RP Group</h1>
+                       <h1 class="navbar-brand logo"><img src="static/logo.png"></h1>
                     
                      <!-- search button -->
                     <form  method = "get" class="form-inline" action="/search">
