--- a/electro/templates/index.html
+++ b/electro/templates/index.html
@@ -131,7 +131,7 @@
           </div>
           <div class="col">
             <div class="form-outline">
-              <input type="text" id="form3Example2" class="form-control" name = 'Last_name' placeholder="Last name"/>
+              <input type="text" id="form3Example2" class="form-control" name = 'Last_name' placeholder="Last name" required/>
             </div>
           </div>
         </div>
