--- a/electro/templates/category.html
+++ b/electro/templates/category.html
@@ -5,7 +5,7 @@
     {% block body %}
 
     <div class="container" id="cate">
-      <h2 class="text-center text-light pt-5">Category</h2>
+      <h2 class="text-center text-light pt-5" style="color: rgb(206, 235, 44);">Category</h2>
       <div class="row mt-4 mb-5 row2">
           {% for item in var %}
 
