--- a/electro/templates/contact.html
+++ b/electro/templates/contact.html
@@ -6,7 +6,7 @@
 
 <div class="container" id="con">
      
-    <h2 class="text-center text-light py-5">Contact-Us</h2>
+    <h2 class="text-center text-light py-5" style="color: rgb(206, 235, 44);">Contact-Us</h2>
     <div class="row d-flex justify-content-center mt-1">
       <div class="col-6">
   <form method="post" class = "was-validated">
