--- a/electro/templates/product.html
+++ b/electro/templates/product.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 <div class="container" id="pro">
-    <h2 class="text-center text-light pt-5">Products</h2>
+    <h2 class="text-center text-light pt-5" style="color: rgb(206, 235, 44);">Products</h2>
     <div class="row d-flex carbod">
         {% for item in pro %}
       <div class="col-md-3 mt-5">
