--- a/electro/templates/index.html
+++ b/electro/templates/index.html
@@ -45,7 +45,7 @@
 
 
 <div class="container" id="cate">
-    <h2 class="text-center text-light pt-5">Category</h2>
+    <h2 class="text-center  pt-5" style="color: rgb(206, 235, 44);">Category</h2>
     <div class="row mt-4 mb-5 row2">
         {% for item in cat %}
 
@@ -96,7 +96,7 @@
 
 
        <div class="container" id="pro">
-        <h2 class="text-center text-light pt-5">Products</h2>
+        <h2 class="text-center text-light pt-5" style="color: rgb(206, 235, 44);">Products</h2>
         <div class="row d-flex carbod">
             {% for item in pro %}
           <div class="col-md-3 mt-5">
@@ -117,7 +117,7 @@
 
        <div class="container" id="con">
    
-        <h2 class="text-center text-light py-5">Contact-Us</h2>
+        <h2 class="text-center text-light py-5 animate__animated animate__flipInX" style="color: rgb(206, 235, 44);">Contact-Us</h2>
         <div class="row d-flex justify-content-center mt-1">
           <div class="col-6">
       <form method="post" class = "was-validated">
